# reqwest-labview

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
lv-src/: reqwest.aliases  reqwest.lvlps  reqwest.lvproj
lv-src/examples/: simple example.vi
lv-src/reqwest/: create.vi  delete.vi  destroy.vi  get.vi  header.ctl  headers.build.vi  parse_response.vi  patch.vi  post.vi  private_data.ctl  private_data.get.vi  put.vi  reqwest.lvclass
lv-src/shared-library/: Report.html  deploy_rt_lib.ps1  dir.mnu  lib_http_rs_labview_64.dylib  reqwest-labview.lvlib
lv-src/shared-library/VIs/: DELETE.vi  GET.vi  PATCH.vi  POST.vi  PUT.vi  dir.mnu  error.get_last.vi  http delete.vi  http free response.vi  http get last error.vi  http get.vi  http patch.vi  http post.vi  http put.vi  http read response.vi  http shutdown.vi  response.free.vi  response.get.vi  shutdown.vi
lv-src/shared-library/subvi/: Error Converter (ErrCode or Status).vi
rs-src/: Cargo.toml  build.rs  cbindgen.toml
rs-src/src/: error.rs  headers.rs  http.rs  lib.rs  runtime.rs  store.rs
