[package]
name = "http_rs_labview"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_rs_labview"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",   # No OpenSSL dependency - critical for cross-platform
    "json",
] }
serde_json = "1"
once_cell = "1"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
strip = true      # Strip debug symbols for smaller binaries
lto = true        # Link-time optimisation
